--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,33 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+.text-heading-color {
+  background-image: linear-gradient(
+    260deg,
+    hsl(195, 100%, 50%) 50%,
+    hsl(122, 100%, 50%) 100%
+  );
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent;
 }
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
+.text-heading2-color {
+  background-image: linear-gradient(
+    260deg,
+    hsl(195, 100%, 50%) 90%,
+    hsl(221, 100%, 50%) 100%
+  );
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent;
 }
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
+.logo-theme-color {
+  filter: drop-shadow(0px 0px 10px #aebfff);
 }
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+.insight_image {
+  position: absolute;
+  top: 50%;
+  left: 100%;
+  transform: translate(-50%, -50%);
+  width: 130vh;
+  z-index: -1;
+  filter: drop-shadow(2px -2px 10px #000000);
+  filter: brightness(1.1);
 }
